--- a/styles/globals.css
+++ b/styles/globals.css
@@ -534,8 +534,9 @@ padding: 30px 65px;
   transform:scale(1.1,1.1)
 }
 .quantity-desc{
+  max-width: 145px;
   border: 1px solid gray;
-padding: 6px;
+  padding: 6px;
 }
 .quantity-desc span{
   font-size: 16px;
